// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.filter override custom filter correctly 1`] = `
<div
  className="ezd-dropdown-custom-view"
  id="customFilter"
>
  <span
    id="setSelectedKeys"
    onClick={[Function]}
  >
    setSelectedKeys
  </span>
  <span
    id="confirm"
    onClick={[Function]}
  >
    Confirm
  </span>
  <span
    id="reset"
    onClick={[Function]}
  >
    Reset
  </span>
  <span
    id="simulateOnSelect"
    onClick={[Function]}
  >
    SimulateOnSelect
  </span>
</div>
`;

exports[`Table.filter renders custom content correctly 1`] = `<div />`;

exports[`Table.filter renders custom filter icon as ReactNode 1`] = `
<div
  class="ezd-table-wrapper"
>
  <div
    class="ezd-spin-nested-loading"
  >
    <div
      class="ezd-spin-container"
    >
      <div
        class="ezd-table"
      >
        <div
          class="ezd-table-container"
        >
          <div
            class="ezd-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup />
              <thead
                class="ezd-table-thead"
              >
                <tr>
                  <th
                    class="ezd-table-cell"
                  >
                    <div
                      class="ezd-table-filter-column"
                    >
                      <span
                        class="ezd-table-column-title"
                      >
                        Name
                      </span>
                      <span
                        class="ezd-dropdown-trigger ezd-table-filter-trigger"
                        role="button"
                        tabindex="-1"
                      >
                        <span
                          class="customize-icon"
                        />
                      </span>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="ezd-table-tbody"
              >
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders custom filter icon as string correctly 1`] = `
<div
  class="ezd-table-wrapper"
>
  <div
    class="ezd-spin-nested-loading"
  >
    <div
      class="ezd-spin-container"
    >
      <div
        class="ezd-table"
      >
        <div
          class="ezd-table-container"
        >
          <div
            class="ezd-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup />
              <thead
                class="ezd-table-thead"
              >
                <tr>
                  <th
                    class="ezd-table-cell"
                  >
                    <div
                      class="ezd-table-filter-column"
                    >
                      <span
                        class="ezd-table-column-title"
                      >
                        Name
                      </span>
                      <span
                        class="ezd-dropdown-trigger ezd-table-filter-trigger"
                        role="button"
                        tabindex="-1"
                      >
                        string
                      </span>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="ezd-table-tbody"
              >
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders custom filter icon correctly 1`] = `
<span
  class="customize-icon"
>
  filtered
</span>
`;

exports[`Table.filter renders custom filter icon correctly 2`] = `
<span
  class="customize-icon"
>
  unfiltered
</span>
`;

exports[`Table.filter renders custom filter icon with right Tooltip title 1`] = `
<div
  class="ezd-table-wrapper"
>
  <div
    class="ezd-spin-nested-loading"
  >
    <div
      class="ezd-spin-container"
    >
      <div
        class="ezd-table"
      >
        <div
          class="ezd-table-container"
        >
          <div
            class="ezd-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup />
              <thead
                class="ezd-table-thead"
              >
                <tr>
                  <th
                    class="ezd-table-cell"
                  >
                    <div
                      class="ezd-table-filter-column"
                    >
                      <span
                        class="ezd-table-column-title"
                      >
                        Name
                      </span>
                      <span
                        class="ezd-dropdown-trigger ezd-table-filter-trigger"
                        role="button"
                        tabindex="-1"
                      >
                        <span
                          class="ezd-tooltip-open"
                        >
                          Tooltip
                        </span>
                        <div>
                          <div
                            class="ezd-tooltip ezd-zoom-big-fast-appear ezd-zoom-big-fast-appear-prepare ezd-zoom-big-fast"
                            style="opacity: 0; pointer-events: none;"
                          >
                            <div
                              class="ezd-tooltip-content"
                            >
                              <div
                                class="ezd-tooltip-arrow"
                              >
                                <span
                                  class="ezd-tooltip-arrow-content"
                                />
                              </div>
                              <div
                                class="ezd-tooltip-inner"
                                role="tooltip"
                              >
                                title
                              </div>
                            </div>
                          </div>
                        </div>
                      </span>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="ezd-table-tbody"
              >
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders filter correctly 1`] = `
<div
  class="ezd-table-wrapper"
>
  <div
    class="ezd-spin-nested-loading"
  >
    <div
      class="ezd-spin-container"
    >
      <div
        class="ezd-table"
      >
        <div
          class="ezd-table-container"
        >
          <div
            class="ezd-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup />
              <thead
                class="ezd-table-thead"
              >
                <tr>
                  <th
                    class="ezd-table-cell"
                  >
                    <div
                      class="ezd-table-filter-column"
                    >
                      <span
                        class="ezd-table-column-title"
                      >
                        Name
                      </span>
                      <span
                        class="ezd-dropdown-trigger ezd-table-filter-trigger"
                        role="button"
                        tabindex="-1"
                      >
                        <span
                          aria-label="filter"
                          class="anticon anticon-filter"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="filter"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="ezd-table-tbody"
              >
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders menu correctly 1`] = `<div />`;

exports[`Table.filter renders radio filter correctly 1`] = `<div />`;

exports[`Table.filter should support getPopupContainer 1`] = `
<div
  class="ezd-table-wrapper"
>
  <div
    class="ezd-spin-nested-loading"
  >
    <div
      class="ezd-spin-container"
    >
      <div
        class="ezd-table"
      >
        <div
          class="ezd-table-container"
        >
          <div
            class="ezd-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup />
              <thead
                class="ezd-table-thead"
              >
                <tr>
                  <th
                    class="ezd-table-cell"
                  >
                    <div
                      class="ezd-table-filter-column"
                    >
                      <span
                        class="ezd-table-column-title"
                      >
                        Name
                      </span>
                      <span
                        class="ezd-dropdown-trigger ezd-table-filter-trigger"
                        role="button"
                        tabindex="-1"
                      >
                        <span
                          aria-label="filter"
                          class="anticon anticon-filter"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="filter"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                            />
                          </svg>
                        </span>
                      </span>
                      <div>
                        <div
                          class="ezd-dropdown ezd-slide-up-appear ezd-slide-up-appear-prepare ezd-slide-up"
                          style="opacity: 0; pointer-events: none;"
                        >
                          <div
                            class="ezd-table-filter-dropdown"
                          >
                            <ul
                              class="ezd-dropdown-menu ezd-dropdown-menu-root ezd-dropdown-menu-vertical ezd-dropdown-menu-light"
                              data-menu-list="true"
                              role="menu"
                              tabindex="0"
                            >
                              <li
                                class="ezd-dropdown-menu-item"
                                data-menu-id="rc-menu-uuid-test-boy"
                                role="menuitem"
                                tabindex="-1"
                              >
                                <span
                                  class="ezd-dropdown-menu-title-content"
                                >
                                  <label
                                    class="ezd-checkbox-wrapper"
                                  >
                                    <span
                                      class="ezd-checkbox"
                                    >
                                      <input
                                        class="ezd-checkbox-input"
                                        type="checkbox"
                                        value=""
                                      />
                                      <span
                                        class="ezd-checkbox-inner"
                                      />
                                    </span>
                                  </label>
                                  <span>
                                    Boy
                                  </span>
                                </span>
                              </li>
                              <li
                                class="ezd-dropdown-menu-item"
                                data-menu-id="rc-menu-uuid-test-girl"
                                role="menuitem"
                                tabindex="-1"
                              >
                                <span
                                  class="ezd-dropdown-menu-title-content"
                                >
                                  <label
                                    class="ezd-checkbox-wrapper"
                                  >
                                    <span
                                      class="ezd-checkbox"
                                    >
                                      <input
                                        class="ezd-checkbox-input"
                                        type="checkbox"
                                        value=""
                                      />
                                      <span
                                        class="ezd-checkbox-inner"
                                      />
                                    </span>
                                  </label>
                                  <span>
                                    Girl
                                  </span>
                                </span>
                              </li>
                              <li
                                class="ezd-dropdown-menu-submenu ezd-dropdown-menu-submenu-vertical"
                                role="none"
                              >
                                <div
                                  aria-controls="rc-menu-uuid-test-title-popup"
                                  aria-expanded="false"
                                  aria-haspopup="true"
                                  class="ezd-dropdown-menu-submenu-title"
                                  data-menu-id="rc-menu-uuid-test-title"
                                  role="menuitem"
                                  tabindex="-1"
                                >
                                  <span
                                    class="ezd-dropdown-menu-title-content"
                                  >
                                    Title
                                  </span>
                                  <i
                                    class="ezd-dropdown-menu-submenu-arrow"
                                  />
                                </div>
                              </li>
                            </ul>
                            <div
                              aria-hidden="true"
                              style="display: none;"
                            />
                            <div
                              class="ezd-table-filter-dropdown-btns"
                            >
                              <button
                                class="ezd-btn ezd-btn-link ezd-btn-sm"
                                disabled=""
                                type="button"
                              >
                                <span>
                                  Reset
                                </span>
                              </button>
                              <button
                                class="ezd-btn ezd-btn-primary ezd-btn-sm"
                                type="button"
                              >
                                <span>
                                  OK
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        style="position: absolute; top: 0px; left: 0px; width: 100%;"
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; width: 100%;"
                      />
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="ezd-table-tbody"
              >
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter should support getPopupContainer from ConfigProvider 1`] = `
<div
  class="ezd-table-wrapper"
>
  <div
    class="ezd-spin-nested-loading"
  >
    <div
      class="ezd-spin-container"
    >
      <div
        class="ezd-table"
      >
        <div
          class="ezd-table-container"
        >
          <div
            class="ezd-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup />
              <thead
                class="ezd-table-thead"
              >
                <tr>
                  <th
                    class="ezd-table-cell"
                  >
                    <div
                      class="ezd-table-filter-column"
                    >
                      <span
                        class="ezd-table-column-title"
                      >
                        Name
                      </span>
                      <span
                        class="ezd-dropdown-trigger ezd-table-filter-trigger"
                        role="button"
                        tabindex="-1"
                      >
                        <span
                          aria-label="filter"
                          class="anticon anticon-filter"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="filter"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                            />
                          </svg>
                        </span>
                      </span>
                      <div>
                        <div
                          class="ezd-dropdown ezd-slide-up-appear ezd-slide-up-appear-prepare ezd-slide-up"
                          style="opacity: 0; pointer-events: none;"
                        >
                          <div
                            class="ezd-table-filter-dropdown"
                          >
                            <ul
                              class="ezd-dropdown-menu ezd-dropdown-menu-root ezd-dropdown-menu-vertical ezd-dropdown-menu-light"
                              data-menu-list="true"
                              role="menu"
                              tabindex="0"
                            >
                              <li
                                class="ezd-dropdown-menu-item"
                                data-menu-id="rc-menu-uuid-test-boy"
                                role="menuitem"
                                tabindex="-1"
                              >
                                <span
                                  class="ezd-dropdown-menu-title-content"
                                >
                                  <label
                                    class="ezd-checkbox-wrapper"
                                  >
                                    <span
                                      class="ezd-checkbox"
                                    >
                                      <input
                                        class="ezd-checkbox-input"
                                        type="checkbox"
                                        value=""
                                      />
                                      <span
                                        class="ezd-checkbox-inner"
                                      />
                                    </span>
                                  </label>
                                  <span>
                                    Boy
                                  </span>
                                </span>
                              </li>
                              <li
                                class="ezd-dropdown-menu-item"
                                data-menu-id="rc-menu-uuid-test-girl"
                                role="menuitem"
                                tabindex="-1"
                              >
                                <span
                                  class="ezd-dropdown-menu-title-content"
                                >
                                  <label
                                    class="ezd-checkbox-wrapper"
                                  >
                                    <span
                                      class="ezd-checkbox"
                                    >
                                      <input
                                        class="ezd-checkbox-input"
                                        type="checkbox"
                                        value=""
                                      />
                                      <span
                                        class="ezd-checkbox-inner"
                                      />
                                    </span>
                                  </label>
                                  <span>
                                    Girl
                                  </span>
                                </span>
                              </li>
                              <li
                                class="ezd-dropdown-menu-submenu ezd-dropdown-menu-submenu-vertical"
                                role="none"
                              >
                                <div
                                  aria-controls="rc-menu-uuid-test-title-popup"
                                  aria-expanded="false"
                                  aria-haspopup="true"
                                  class="ezd-dropdown-menu-submenu-title"
                                  data-menu-id="rc-menu-uuid-test-title"
                                  role="menuitem"
                                  tabindex="-1"
                                >
                                  <span
                                    class="ezd-dropdown-menu-title-content"
                                  >
                                    Title
                                  </span>
                                  <i
                                    class="ezd-dropdown-menu-submenu-arrow"
                                  />
                                </div>
                              </li>
                            </ul>
                            <div
                              aria-hidden="true"
                              style="display: none;"
                            />
                            <div
                              class="ezd-table-filter-dropdown-btns"
                            >
                              <button
                                class="ezd-btn ezd-btn-link ezd-btn-sm"
                                disabled=""
                                type="button"
                              >
                                <span>
                                  Reset
                                </span>
                              </button>
                              <button
                                class="ezd-btn ezd-btn-primary ezd-btn-sm"
                                type="button"
                              >
                                <span>
                                  OK
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        style="position: absolute; top: 0px; left: 0px; width: 100%;"
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; width: 100%;"
                      />
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="ezd-table-tbody"
              >
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="ezd-table-row ezd-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ezd-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
